# sre-agent

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool_config.json  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  README.md  SESSION_WALKTHROUGH.md  TASK_LIST.md  TESTING.md  bench.py  benchmark.py  benchmark_mean.py  benchmark_statistical_analysis.py  check_import.py  cloudbuild.yaml  debug_agent.py  debug_registry_tool.py  dummy.js  fetch_backend_errors.py  get_backend_stacktrace.py  get_env_vars.py  inspect_toolset.py  inspect_toolset_attrs.py  llm.txt  obsolete.txt  package-lock.json  patch.diff  patch2.diff  plan.md  pyproject.toml  replace_demo_stats.py  repo_map.txt  (+11 more)
.agent/plans/: bigquery_sql_viewer_enhancements.md
.claude/: settings.json
.github/: CICD.md
.github/workflows/: ai-code-review.yml  python-app.yml
.jules/: bolt.md
.serena/: SETUP_GUIDE.md  project.yml
.serena/memories/: agent_graph_feature_exploration.md  agent_orchestration_patterns.md  architecture_deep_dive.md  authentication_euc_pattern.md  flutter_frontend_comprehensive_architecture.md  genui_protocol_standards.md  project_completion_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md  tech_stack.md  test_structure_summary.md  tools_catalog_patterns.md
agent_graph_ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
agent_graph_ui/src/: App.tsx  types.ts
agent_ops_ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
agent_ops_ui/src/: App.tsx  index.css  main.tsx  setupTests.ts  types.ts
autosre/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
autosre/integration_test/: app_test.dart
autosre/lib/: app.dart  catalog.dart  main.dart
autosre/test/: ansi_parser_test.dart  auth_guest_login_test.dart  auth_service_helper_test.dart  auth_service_logic_test.dart  auth_wrapper_test.dart  bigquery_sidebar_test.dart  catalog_renderer_test.dart  component_wrapper_test.dart  conversation_page_test.dart  council_panel_test.dart  dashboard_layout_test.dart  dashboard_resize_test.dart  fl_nodes_api_test.dart  flutter_test_config.dart  glow_action_chip_scroll_test.dart  glow_action_chip_test.dart  help_service_test.dart  prompt_history_service_test.dart  services_test.dart  test_helper.dart  unified_prompt_input_functional_test.dart  unified_prompt_input_golden_test.dart  unified_prompt_input_test.dart  widget_test.dart
autosre/web/: index.html  manifest.json
deploy/: Dockerfile.unified  README.md  deploy.py  deploy_all.py  deploy_gke.py  deploy_web.py  get_id.py  grant_permissions.py  run_eval.py  setup_agent_identity_iam.sh  setup_ca_agent.py  test_deploy.py  verify_agent_identity.py
deploy/k8s/: deployment.yaml  service.yaml
docs/: AGENT_ENGINE.md  AGENT_GRAPH_SETUP.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_LEARNINGS.md  BACKEND.md  DOCUMENTATION_REVIEW_AND_ROADMAP.md  EVALUATIONS.md  FRONTEND.md  IMPROVEMENTS.md  OBSERVABILITY.md  PROJECT_PLAN.md  README.md  SPANNER_TROUBLESHOOTING_PLAYBOOK.md  TECHNICAL_DECISIONS.md  TOOLS_GUIDE.md  debugging_connectivity.md  debugging_telemetry_and_auth.md  memory_best_practices.md  security.md
docs/agent_ops/: README.md  architecture.md  bigquery_setup.md  context_graph.md  dashboard.md  observability_theory.md  setup.md  visualization_setup.md
docs/architecture/: AGENTS_AND_TOOLS.md  authentication.md  backend.md  decisions.md  frontend.md  help_system.md  project_structure.md  system_instruction_snapshot_v1.md  system_overview.md  telemetry.md
docs/authentication/: auth_learnings.md  authentication.md
docs/components/: README.md
docs/concepts/: agent_graph.md  agent_graph_bq_schema.md  agent_orchestration.md  auth_learnings.md  autonomous_reliability.md  gcp_enhancements.md  memory.md  multi_agent_observability.md  observability.md  online_research_and_self_healing.md
docs/debugging/: debugging_connectivity.md  debugging_genui.md  debugging_telemetry_and_auth.md
docs/features/: online_eval_service.md
docs/guides/: agent_ops_dashboard.md  bigquery_agent_graph_setup.md  dashboard_query_language.md  dashboard_ui.md  dashboards.md  debugging_connectivity.md  debugging_genui.md  debugging_telemetry_and_auth.md  default_experience.md  demo_mode.md  deployment.md  development.md  evaluation.md  frontend_selection.md  frontend_testing.md  getting_started.md  linting.md  project_selector.md  rendering_telemetry.md  testing.md
docs/help/: manifest.json
docs/infrastructure/: DEPLOYMENT.md
docs/knowledge/: vertex_ai_sdk_notes.md
docs/plans/: 2026-02-22-demo-mode-design.md  2026-02-22-demo-mode-implementation.md  2026-02-23-evals-tab-design.md  2026-02-23-evals-tab-plan.md
docs/reference/: api.md  configuration.md  security.md  tools.md
docs/roadmap/: README.md  phase-1-foundation.md  phase-2-memory.md  phase-3-observability.md  (+3 more)
eval/: README.md  basic_capabilities.test.json  conftest.py  error_diagnosis.test.json  failure_modes.test.json  incident_investigation.test.json  kubernetes_debugging.test.json  metrics_analysis.test.json  multi_signal_correlation.test.json  slo_burn_rate.test.json  test_config.json  test_evaluate.py  tool_selection.test.json
gcp_observability/: agent.py
scripts/: analyze_health.py  migrate_default_sessions.py  setup_agent_graph_bq.sh  setup_oauth.py  start_dev.py  start_unified.sh  test_langfuse.py  test_langsmith.py  update_docs_index.py
sre_agent/: README.md  __init__.py  agent.py  auth.py  exceptions.py  model_config.py  prompt.py  schema.py  suggestions.py  version.py
tests/: README.md  conftest.py  test_agent.py  test_agent_execution.py  test_agent_integration.py  test_end_to_end_analysis.py  test_end_to_end_with_mocks.py  test_trace_selection.py  test_two_stage_agent.py
toolbox_mcp/: README.md  config.yaml  deploy.sh
trace_analyzer/: __init__.py  agent.py  decorators.py  prompt.py  schema.py  telemetry.py
web/: README.md  next.config.mjs  package-lock.json  package.json
(+996 files in other folders)
