[project]
name = "sre-agent"
version = "0.2.0"
description = "SRE Agent - Google Cloud Observability analysis agent for traces, logs, and metrics"
authors = [{ name = "SRT", email = "srtuxx@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]>=1.147.0",
    "google-genai>=1.72.0",
    "opentelemetry-instrumentation-google-genai>=0.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "google-adk>=1.29.0",
    "google-cloud-trace>=1.19.0",
    "google-auth>=2.49.2",
    "pandas>=2.3.3",
    "grpcio>=1.80.0",
    # Phase 4: Extended GCP integrations
    "google-cloud-logging>=3.15.0",
    "google-cloud-monitoring>=2.30.0",
    "google-cloud-error-reporting>=1.15.0",
    "google-cloud-bigquery-logging>=1.9.0",
    "google-cloud-firestore>=2.26.0",  # For session/state persistence in Cloud Run
    "aiosqlite>=0.22.1",  # Async SQLite driver for ADK DatabaseSessionService
    "requests>=2.33.1",
    # Log pattern analysis
    "drain3>=0.9.11",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "mcp>=1.27.0",
    "pydantic-core>=2.45.0",
    "tomli>=2.0.1 ; python_version < '3.11'",
    "greenlet>=3.4.0",
    "cryptography>=46.0.7",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "cloudpickle>=3.1.2",
    "google-cloud-geminidataanalytics>=0.12.0",
    "pyopenssl>=26.0.0",
    "google-cloud-bigquery>=3.41.0",
]

requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
arize = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "google-adk[eval]>=1.29.0",
    "nest-asyncio>=1.6.0",
    "pytest-xdist>=3.8.0",
    "ruff==0.15.10",
    "mypy>=1.20.0",
    "pytest-cov>=7.1.0",
    "absl-py>=2.4.0",
    "poethepoet>=0.44.0",
    "pre-commit>=4.5.1",
    "codespell>=2.4.2",
    "detect-secrets>=1.5.0",
    "deptry>=0.25.1",
    "langfuse>=4.2.0",
    "openinference-instrumentation-google-adk>=0.1.10",
    "opentelemetry-exporter-otlp>=1.41.0",
    "openinference-instrumentation-vertexai>=0.1.12",
]



[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "D"]
ignore = ["E501", "C901", "D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["sre_agent"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["D"]
"eval/**" = ["D"]
"deploy/**" = ["D"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
exclude = ["tests/", "eval/", "deploy/", "adk-docs/", "adk-python/", "autosre/", "scripts/", "docs/"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib -n auto --dist worksteal"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:\\[EXPERIMENTAL\\].*:UserWarning",
    "ignore:\\[WIP\\].*:UserWarning",
    "ignore:Inheritance class AiohttpClientSession from ClientSession is discouraged:DeprecationWarning",
    "ignore:.*module is experimental.*",
    "ignore:.*experimental.*:UserWarning",
    "ignore:unclosed event loop:ResourceWarning",
]

[build-system]
requires = ["uv_build>=0.11.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""



[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.codespell]
skip = "*.json,*.test.json,*.js,*.lock,./web/node_modules/*,./web/.next/*,./.venv/*,./.git/*,pyproject.toml,./autosre/build/*,./autosre/.dart_tool/*,./adk-docs/*,./adk-python/*,./autosre/linux/*,./autosre/windows/*,./autosre/macos/*,./agent_ops_ui/node_modules/*,./agent_ops_ui/dist/*,./agent_ops_ui/build/*"
ignore-words-list = "already,ot,alledges,daa"

[tool.deptry]
ignore = ["DEP001", "DEP004"]

[tool.deptry.per_rule_ignores]
DEP002 = ["grpcio", "requests", "opentelemetry-exporter-otlp-proto-grpc", "aiosqlite", "greenlet", "openinference-instrumentation-google-adk", "arize-otel", "nest-asyncio", "pyopenssl"]
DEP003 = ["mcp", "pydantic_core", "proto", "anyio"]

[tool.agent-starter-pack]
example_question = "Analyze traces and logs in project my-gcp-project to find performance issues"

[tool.agent-starter-pack.settings]
agent_directory = "sre_agent"

[tool.poe.tasks]
dev = { help = "Run the full dev stack (backend + frontend)", cmd = "python scripts/start_dev.py", envfile = ".env" }
update-docs = { help = "Update llm.txt docs index and generate repo_map.txt", cmd = "python scripts/update_docs_index.py" }
sync = { help = "Sync all dependencies (uv + flutter + npm)", sequence = ["_sync_uv", "_sync_flutter", "_sync_npm"] }
_sync_uv = { cmd = "uv sync" }
_sync_flutter = { cmd = "flutter pub get", cwd = "autosre" }
_sync_npm = { cmd = "npm install", cwd = "agent_ops_ui" }
run = { help = "Run agent in terminal", cmd = "adk run sre_agent", env = { OTEL_TO_CLOUD = "true" }, envfile = ".env" }
web = { help = "Run agent web UI & Tools API", cmd = "python server.py", envfile = ".env" }
list = { help = "List deployed agents", cmd = "python deploy/deploy.py --list", envfile = ".env" }
lint = { help = "Run all linters", sequence = ["format", "_lint_only", "typecheck", "spell", "deptry"] }
_lint_only = { cmd = "ruff check .", envfile = ".env" }
format = { help = "Format code", cmd = "ruff format .", envfile = ".env" }
typecheck = { help = "Run type checking", cmd = "mypy .", envfile = ".env" }
spell = { help = "Check spelling", cmd = "codespell", envfile = ".env" }
deptry = { help = "Check for unused/missing dependencies", cmd = "deptry .", envfile = ".env" }
lint-flutter = { help = "Run Flutter frontend analysis", cmd = "flutter analyze", cwd = "autosre" }
lint-ui = { help = "Run React frontend analysis", cmd = "npm run lint", cwd = "agent_ops_ui" }
typecheck-ui = { help = "Run React frontend type checking", cmd = "npm run typecheck", cwd = "agent_ops_ui" }
lint-all = { help = "Run backend and all frontend linters", sequence = ["lint", "lint-flutter", "lint-ui", "typecheck-ui"] }
test = { help = "Run tests with coverage guard (parallel)", cmd = "pytest tests --cov=sre_agent --cov-report=term-missing --cov-fail-under=80", env = { GOOGLE_CLOUD_PROJECT = "test-project", STRICT_EUC_ENFORCEMENT = "false", DISABLE_TELEMETRY = "true", GOOGLE_GENAI_USE_VERTEXAI = "false", SRE_AGENT_DEPLOYMENT_MODE = "true" }, envfile = ".env" }
test-fast = { help = "Run tests without coverage (fastest)", cmd = "pytest tests --no-cov -q", env = { GOOGLE_CLOUD_PROJECT = "test-project", STRICT_EUC_ENFORCEMENT = "false", DISABLE_TELEMETRY = "true", GOOGLE_GENAI_USE_VERTEXAI = "false", SRE_AGENT_DEPLOYMENT_MODE = "true" }, envfile = ".env" }
test-flutter = { help = "Run Flutter frontend tests", cmd = "flutter test", cwd = "autosre" }
test-ui = { help = "Run React frontend tests", cmd = "npm run test", cwd = "agent_ops_ui" }
test-all = { help = "Run backend and all frontend tests", sequence = ["test", "test-flutter", "test-ui"] }
eval = { help = "Run agent evaluations", cmd = "python deploy/run_eval.py", envfile = ".env" }

deploy = { help = "Deploy agent to Agent Engine", sequence = ["sync", "_deploy_only"] }
_deploy_only = { cmd = "python deploy/deploy.py --create", envfile = ".env" }

deploy-web = { help = "Deploy web frontend to Cloud Run", cmd = "python deploy/deploy_web.py", envfile = ".env" }

deploy-all = { help = "Deploy both backend (Vertex) and frontend (Cloud Run)", cmd = "python deploy/deploy_all.py", envfile = ".env" }

deploy-gke = { help = "Deploy full stack to GKE", cmd = "python deploy/deploy_gke.py", envfile = ".env" }

delete = { help = "Delete agent (usage: uv run poe delete --resource_id ID)", cmd = "python deploy/deploy.py --delete", envfile = ".env" }

pre-commit = { help = "Run all pre-commit hooks", cmd = "pre-commit run --all-files", envfile = ".env" }

[tool.deptry.package_module_name_map]
tomli = "tomli"
